# helix-box.

./: .gitignore  README.md  index.html  mobile_app_guide.md  next_steps.md  package-lock.json  render_deployment_guide.md  vercel.json  vercel_deployment_guide.md
app/: .env.example  README.md  app.json  eas.json  hot-updater.config.ts  package-lock.json  package.json
app/app/: _layout.tsx  feedback.tsx  help.tsx  index.tsx  onboarding.tsx
app/app/(auth)/: auth.tsx
app/app/workspace/: _layout.tsx
app/components/: Header.tsx  PluginTabBar.tsx
app/components/editor/: types.ts
app/contexts/: ConnectionContext.tsx
app/hooks/: useGit.ts
app/lib/: proxyServer.ts  storage.ts
app/lib/transport/: protocol.ts  v2.ts
app/plugins/: context.tsx  registry.ts
assets/assets/: index-Bc5mQjI3.js  index-CoWNS6Jk.css  index-D0ceJcIE.js  index-D3ImnyeU.css  index-D794YoC5.js  index-D7eBQWPd.js  index-DCVElzjC.css  index-DY0hC0Cz.js  index-DtxUovqC.css  index-o_W-onRz.css
cli/: README.md  package-lock.json  package.json
cli/src/: index.ts
cli/src/ai/: codex.ts  index.ts  opencode.ts
cli/src/transport/: protocol.ts  v2.ts
landing/: app.js  components.json  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vercel.json
landing/src/: App.jsx  index.css
landing/src/components/: CardFlip.jsx  CardStack.jsx  LiquidGlassCard.jsx  Navbar.jsx  ParticleButton.jsx  (+2 more)
manager/: Dockerfile  package-lock.json  package.json
manager/src/: index.ts
proxy/: Dockerfile  package.json
proxy/src/: index.ts
pty/: Cargo.toml
pty/src/: session.rs
(+26 files in other folders)
