[package]
name = "helixbox-pty"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "helixbox-pty"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
wezterm-term = { git = "https://github.com/sohzm/wezterm" }
wezterm-surface = { git = "https://github.com/sohzm/wezterm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
